syntax = "proto3";

package storage;

message IFile {
  bytes content = 1;
  string destination = 2;
  string filename = 3;
}

message PutFileResponse {
  string url = 1;
}

message ReadFile {
  string filePath = 1;
}

message ReadFileResponse {
  bytes content = 1;
}

message HealthCheckResult {
  string message = 1;
}

service IStorageController {
  rpc Put(IFile) returns (PutFileResponse) {};
  rpc Read(ReadFile) returns (ReadFileResponse){};
  rpc HealthCheck(HealthCheckResult) returns (HealthCheckResult){};
}